plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.10'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dev.jgregorio.demo'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Template'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JODReports
    implementation group: 'com.artofsolving', name: 'jodconverter', version: '2.2.1'
    implementation group: 'net.sf.jodreports', name: 'jodreports', version: '2.4.0'
}

tasks.named('bootRun') {
    jvmArgs([
            '--add-exports', 'java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED',
            '--add-exports', 'java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED'
    ])
}

tasks.named('test') {
    useJUnitPlatform()
    // Esto inyecta el parámetro automáticamente al ejecutar tests
    jvmArgs([
            '--add-exports', 'java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED',
            '--add-exports', 'java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED'
    ])
}
